--- a/test/test.csproj
+++ b/test/test.csproj
@@ -9,4 +9,8 @@
       <ProjectReference Include="..\dotq\dotq.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="ServiceStack.Redis" Version="5.10.2" />
+    </ItemGroup>
+
 </Project>
