--- a/dotq/dotq.csproj
+++ b/dotq/dotq.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+      <PackageReference Include="ServiceStack.Redis" Version="5.10.2" />
     </ItemGroup>
 
 </Project>
