--- a/dotq/dotq.csproj
+++ b/dotq/dotq.csproj
@@ -11,4 +11,8 @@
       <PackageReference Include="StackExchange.Redis" Version="2.2.4" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Api" />
+    </ItemGroup>
+
 </Project>
